--- a/src/main/resources/templates/email-verification-message.html
+++ b/src/main/resources/templates/email-verification-message.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meter Notifier | delete-confirmation</title>
-    <link rel="stylesheet" href="../email-verification-message.css">
-    <link rel="stylesheet" href="../navbar.css">
+    <link rel="stylesheet" th:href="@{/email-verification-message.css}">
+    <link rel="stylesheet" th:href="@{/navbar.css}">
 </head>
 <body>
 <div th:insert="navbar :: navbar"></div>
