--- a/src/main/resources/templates/customer-account-details.html
+++ b/src/main/resources/templates/customer-account-details.html
@@ -4,8 +4,8 @@
     <title>Meter Notifier | Customer Details</title>
     <link rel="stylesheet"
           type="text/css"
-          href="../customer-account-details.css">
-    <link rel="stylesheet" href="../navbar.css">
+          th:href="@{/customer-account-details.css}">
+    <link rel="stylesheet" th:href="@{/navbar.css}">
     <link rel="stylesheet"
           type="text/css"
           href="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.css"/>
@@ -41,7 +41,8 @@
             <td th:if="${meterAccountDetails.notification.status}">On</td>
             <td th:if="${not meterAccountDetails.notification.status}">Off</td>
             <td>
-                <a th:href="@{/edit-meter/{accountNumber}(accountNumber=${meterAccountDetails.accountNumber})}"
+                <a
+                   th:href="@{/edit-meter/{id}/{accountNumber}(id=${customer.id}, accountNumber=${meterAccountDetails.accountNumber})}"
                    class="btn btn-primary">Edit</a>
                 <a th:href="@{/delete-confirmation/{accountNumber}(accountNumber=${meterAccountDetails.accountNumber})}"
                    class="btn btn-danger ml-2">Delete</a>
