--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Meter Notifier | Edit Meter</title>
-    <link rel="stylesheet" href="../edit-meter.css">
-    <link rel="stylesheet" href="../navbar.css">
+    <link rel="stylesheet" th:href="@{/navbar.css}">
+    <link rel="stylesheet" th:href="@{/edit-meter.css}">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
@@ -23,13 +23,13 @@
             <form action="#"
                   class="form-horizontal h3"
                   method="post"
-                  th:action="@{/edit-meter/{accountNumber}(accountNumber=${meterAccountDetails.accountNumber})}"
-                  th:object="${meterAccountDetails}"
+                  th:href="@{/edit-meter/{id}/{accountNumber}(id=${id}, accountNumber=${formData.accountNumber})}"
+                  th:object="${formData}"
             >
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Email</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="Email" th:field="*{customer.email}"
+                        <input type="text" class="form-control" placeholder="Email" th:field="*{email}"
                                readonly style="font-size:15px;">
                     </div>
                 </div>
@@ -37,21 +37,21 @@
                     <label class="col-sm-3 control-label">Account No</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" placeholder="Account No" th:field="*{accountNumber}"
-                               required style="font-size:15px;">
+                               readonly style="font-size:15px;">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Meter No</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" placeholder="Meter No" th:field="*{meterNumber}"
-                               required style="font-size:15px;">
+                               readonly style="font-size:15px;">
                     </div>
                 </div>
                 <hr>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Low Balance Notification</label>
                     <div class="col-sm-3">
-                        <select th:field="*{notification.status}">
+                        <select th:field="*{notificationStatus}">
                             <option th:value="true" th:text="On"></option>
                             <option th:value="false" th:text="Off"></option>
                         </select>
@@ -63,14 +63,14 @@
                         <label class="control-label small" style="font-size:15px; padding-bottom: 5px">When the balance
                             gets lower</label>
                         <input type="number" min="0" class="form-control" placeholder="balance"
-                               th:field="*{notification.minimumBalance}" th:required="*{notification.status}"
+                               th:field="*{minBalance}" th:required="*{notificationStatus}"
                                style="font-size:15px;">
                     </div>
                     <div class="col-sm-4">
                         <label class="control-label small" style="font-size:15px; padding-bottom: 5px">Send email
                             to</label>
                         <input type="email" class="form-control" placeholder="email"
-                               th:field="*{notification.emailToSendNotification}" th:required="*{notification.status}"
+                               th:field="*{sendNotificationTo}" th:required="*{notificationStatus}"
                                style="font-size:15px;">
                     </div>
                 </div>
