move all css files to css directory

--- a/src/main/resources/templates/customer-account-details.html
+++ b/src/main/resources/templates/customer-account-details.html
@@ -4,8 +4,8 @@
     <title>Meter Notifier | Customer Details</title>
     <link rel="stylesheet"
           type="text/css"
-          th:href="@{/customer-account-details.css}">
-    <link rel="stylesheet" th:href="@{/navbar.css}">
+          th:href="@{/css/customer-account-details.css}">
+    <link rel="stylesheet" th:href="@{/css/navbar.css}">
     <link rel="stylesheet"
           type="text/css"
           href="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.css"/>
