--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meter Notifier | About</title>
-    <link rel="stylesheet" th:href="@{/about.css}">
-    <link rel="stylesheet" th:href="@{/navbar.css}">
+    <link rel="stylesheet" th:href="@{/css/about.css}">
+    <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
 <div th:insert="navbar :: navbar"></div>
