--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -23,27 +23,27 @@
             <form action="#"
                   class="form-horizontal h3"
                   method="post"
-                  th:href="@{/edit-meter/{id}/{accountNumber}(id=${id}, accountNumber=${formData.accountNumber})}"
-                  th:object="${formData}"
+                  th:href="@{/edit-meter/{id}/{accountNumber}(id=${customer.id}, accountNumber=${meter.accountNumber})}"
+                  th:object="${notification}"
             >
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Email</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="Email" th:field="*{email}"
+                        <input type="text" class="form-control" placeholder="Email" th:field="${customer.email}"
                                readonly style="font-size:15px;">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Account No</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="Account No" th:field="*{accountNumber}"
+                        <input type="text" class="form-control" placeholder="Account No" th:field="${meter.accountNumber}"
                                readonly style="font-size:15px;">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Meter No</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="Meter No" th:field="*{meterNumber}"
+                        <input type="text" class="form-control" placeholder="Meter No" th:field="${meter.meterNumber}"
                                readonly style="font-size:15px;">
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Low Balance Notification</label>
                     <div class="col-sm-3">
-                        <select th:field="*{notificationStatus}">
+                        <select th:field="*{status}">
                             <option th:value="true" th:text="On"></option>
                             <option th:value="false" th:text="Off"></option>
                         </select>
@@ -63,14 +63,14 @@
                         <label class="control-label small" style="font-size:15px; padding-bottom: 5px">When the balance
                             gets lower</label>
                         <input type="number" min="0" class="form-control" placeholder="balance"
-                               th:field="*{minBalance}" th:required="*{notificationStatus}"
+                               th:field="*{minimumBalance}" th:required="*{status}"
                                style="font-size:15px;">
                     </div>
                     <div class="col-sm-4">
                         <label class="control-label small" style="font-size:15px; padding-bottom: 5px">Send email
                             to</label>
                         <input type="email" class="form-control" placeholder="email"
-                               th:field="*{sendNotificationTo}" th:required="*{notificationStatus}"
+                               th:field="*{emailToSendNotification}" th:required="*{status}"
                                style="font-size:15px;">
                     </div>
                 </div>
