logging aspect added

--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
-<div th:insert="navbar :: navbar"></div>
+<div th:insert="~{navbar :: navbar}"></div>
 <div id="main">
     <div class="fof">
         <h1>Error 404</h1>
