--- a/src/main/resources/templates/edit-meter.html
+++ b/src/main/resources/templates/edit-meter.html
@@ -15,7 +15,7 @@
 </head>
 
 <body style="background: #c1c1c1;">
-<div th:insert="navbar :: navbar"></div>
+<div th:insert="~{navbar :: navbar}"></div>
 <div class="container">
     <h2 style="text-align: center;font-size:32px">Edit Meter Details</h2>
     <section class="panel panel-default" style="border-color: #ffffff; background: transparent">
