--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
-<div th:insert="navbar :: navbar"></div>
+<div th:insert="~{navbar :: navbar}"></div>
 <div class="container">
     <div class="wrapper">
         <div class="r-1"><h2>About Meter Notifier</h2></div>
